--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
-@import "css/reset.css";
-@import "css/normalize.css";
+@import "../css/reset.css";
+@import "../css/normalize.css";
 
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400,700);
 
